--- a/index.html
+++ b/index.html
@@ -47,5 +47,336 @@
         </ul>
       </nav>
     </header>
+
+    <main class="main">
+      <section class="main_section">
+        <div class="outer">
+          <div class="flex_items">
+            <h1 class="para section h1">WELCOME TO GLADTIDINGSDATA</h1>
+            <p class="subhead section p1">Gladtidingsdata for</p>
+            <span class="subhead section p1">everyone</span>
+            <p class="para section p1">
+              Buy cheap and affordable plan easily with cables
+            </p>
+            <span class="para section p1">
+              subscriptions
+              <a href="dashboard.html" class="h1">REGISTER NOW!!</a>
+            </span>
+            <img src="Pic/" alt="" />
+            <a href="dashboard" class="anolink">
+              Dashboard <img src="Pic/person.png" alt="" class="dash" />
+            </a>
+          </div>
+          <img
+            src="Pic/praise.png"
+            class="fpic"
+            alt="pic"
+            height="532"
+            width="469"
+          />
+        </div>
+      </section>
+
+      <div class="dept aboutus" id="about">
+        <div class="about_text">
+          <h2 class="aboutUs subhead">Why Choose Us</h2>
+          <p class="aboutUs para">
+            Trusted data platform for resellers. Subscribe for cheap data plans
+            at affordable price for all networks.
+          </p>
+        </div>
+
+        <div class="roll">
+          <div class="box">
+            <img
+              src="Pic/reliable.png"
+              alt="reliable"
+              height="128"
+              width="128"
+            />
+            <p>Reliability</p>
+          </div>
+          <div class="box">
+            <img src="Pic/auto.png" alt="automation" height="128" width="128" />
+            <p>Automation</p>
+          </div>
+          <div class="box">
+            <img
+              src="Pic/customer.png"
+              alt="customer support"
+              height="128"
+              width="128"
+            />
+            <p>customer Support</p>
+          </div>
+          <div class="box">
+            <img
+              src="Pic/security.png"
+              alt="security"
+              height="128"
+              width="128"
+            />
+            <p>Security</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="features" class="dept">
+        <div class="feat_1">
+          <div class="Awesome">
+            <img src="Pic/hero-1-img.png" alt="pic2" height="962" width="773" />
+            <p class="feature para">Our Features</p>
+
+            <h2 class="feature subhead">We Provide Awesome Services</h2>
+
+            <p class="para">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In odit
+              est quae id voluptates aperiam cupiditate soluta voluptate
+              blanditiis, nihil eius illo fugiat necessitatibus cum natus
+              veritatis? Provident recusandae quos aperiam dolorum libero
+              adipisci fuga perspiciatis iste? Possimus, exercitationem
+              assumenda?
+            </p>
+            <br />
+            <p class="para">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In odit
+              est quae id voluptates aperiam cupiditate soluta voluptate
+              blanditiis, nihil eius illo fugiat necessitatibus cum natus
+              veritatis? Provident recusandae quos aperiam dolorum libero
+              adipisci fuga perspiciatis iste? Possimus, exercitationem
+              assumenda?
+            </p>
+          </div>
+        </div>
+        <div class="feat_2">
+          <div class="seconds">
+            <p class="feature para">Register in 30 seconds</p>
+            <h2 class="feature subhead">BecomeAn Agent</h2>
+
+            <p class="para">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In odit
+              est quae id voluptates aperiam cupiditate soluta voluptate
+              blanditiis, nihil eius illo fugiat necessitatibus cum natus
+              veritatis? Provident recusandae quos aperiam dolorum libero
+              adipisci fuga perspiciatis iste? Possimus, exercitationem
+              assumenda?
+            </p>
+            <br />
+
+            <p class="para">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. In odit
+              est quae id voluptates aperiam cupiditate soluta voluptate
+              blanditiis, nihil eius illo fugiat necessitatibus cum natus
+              veritatis? Provident recusandae quos aperiam dolorum libero
+              adipisci fuga perspiciatis iste? Possimus, exercitationem
+              assumenda?
+            </p>
+            <img src="Pic/5.png" alt="pic2" height="527" width="527" />
+          </div>
+        </div>
+
+        <div class="feat_3">
+          <div class="integrate">
+            <img src="Pic/carbon.png" alt="pic2" height="960" width="1540" />
+            <p class="feature para">Perfect Integration</p>
+            <h2 class="feature subhead">Intgrate our API</h2>
+
+            <p class="para">
+              Are you a developer, adipisicing elit. In odit est quae id
+              voluptates aperiam cupiditate soluta voluptate blanditiis, nihil
+              eius illo fugiat necessitatibus cum natus veritatis? Provident
+              recusandae quos aperiam dolorum libero adipisci fuga perspiciatis
+              iste? Possimus, exercitationem assumenda?
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="service" class="dept">
+        <div class="serv">
+          <h2 class="subhead">Our Services</h2>
+          <p class="para">
+            We offer instant recharge of Airtime, Data Bundle, Cable Tv( DSTV,
+            GOTV &amp; startimes) and so much more.
+          </p>
+          <container class="serv_grid_items">
+            <div class="block">
+              <img src="Pic/wifi.png" alt="wifi" height="128" width="128" />
+              <h3 class="serv_h3">BULK SMS</h3>
+              <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                voluptates!
+              </p>
+            </div>
+            <div class="block">
+              <img src="Pic/sms.png" alt="sms" height="128" width="128" />
+              <h3 class="serv_h3">UTILITY BILLS</h3>
+              <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                voluptates!
+              </p>
+            </div>
+            <div class="block">
+              <img src="Pic/light.png" alt="bulb" height="128" width="128" />
+              <h3 class="serv_h3">AIRTIME RECHARGE</h3>
+              <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                voluptates!
+              </p>
+            </div>
+            <div class="block">
+              <img src="Pic/phone.png" alt="phone" height="128" width="128" />
+              <h3 class="serv_h3">CABLE SUBSCRIPTION</h3>
+              <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                voluptates!
+              </p>
+            </div>
+            <div class="block">
+              <img src="Pic/tv.png" alt="tv" height="128" width="128" />
+              <h3 class="serv_h3">Buy Data</h3>
+              <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                voluptates!
+              </p>
+            </div>
+          </container>
+        </div>
+      </div>
+      <div id="faqs" class="dept">
+        <div class="FAQ"></div>
+        <div class="faq_1">
+          <p class="para">FAQs</p>
+          <h2 class="subhead">Common Questions</h2>
+          <p class="para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut
+            doloremque magnam cupiditate magni ipsam, aliquid eius officiis
+            natus, molestiae quis impedit nobis corporis officia consectetur
+            eligendi eos culpa adipisci!
+          </p>
+        </div>
+        <div class="faq_2">
+          <p>How to buy data</p>
+          <ol>
+            <li>Login to your account</li>
+            <li>If not click <a href="">here</a> to register</li>
+            <li>After login click fund my account</li>
+            <li>Select coupon payment</li>
+            <p>NB: You can buy coupon from our agents</p>
+          </ol>
+        </div>
+        <hr />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
+          temporibus.
+        </p>
+        <img src="" alt="" />
+        <hr />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
+          temporibus.
+        </p>
+        <img src="" alt="" />
+        <hr />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
+          temporibus.
+        </p>
+        <img src="" alt="" />
+        <hr />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
+          temporibus.
+        </p>
+        <img src="" alt="" />
+        <hr />
+        <input type="checkbox" name="" id="" />
+        Have more questions? <a href="">Ask your Questions here.</a>
+      </div>
+
+      <div class="download">
+        <h1>Welcome to Gladtidingsdata</h1>
+        <p>Download The GLADTIDINGSDATA App</p>
+        <p>The Gladtidingsdata App is now available on Google PlayStore.</p>
+        <img src="" alt="" />
+      </div>
+
+      <div class="review dept">
+        <p class="para">Review</p>
+        <h2 class="subhead">Our Happy Customers</h2>
+        <div class="review_tags">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quisquam.
+        </div>
+        <div class="review_tags">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id,
+          mollitia!
+        </div>
+      </div>
+
+      <div class="plans dept">
+        <p class="para">Plans And Prices</p>
+        <container class="plans_block">
+          <div class="plan_tag">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsa
+            dignissimos, earum esse explicabo dicta pariatur odit impedit
+            suscipit assumenda sint eius culpa. Odit laudantium iusto possimus
+            non nemo eligendi neque, quos qui excepturi, soluta omnis animi
+            doloribus, voluptas sint dolores eaque ipsum temporibus placeat
+            veritatis et dolorem numquam. Cum!
+          </div>
+          <div class="plan_tag">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo
+            accusamus, commodi incidunt id laboriosam labore impedit et
+            delectus, sed consequuntur dolores mollitia ab. Incidunt reiciendis
+            eligendi maiores nostrum excepturi veritatis in minima placeat.
+            Consequatur hic adipisci, officia quod iste cum nesciunt ipsa id
+            reiciendis quasi. A corporis voluptatem quis id.
+          </div>
+          <div class="plan_tag">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Perferendis dolore, sed repellendus atque quibusdam magnam quo est,
+            velit blanditiis sequi facere itaque officiis similique pariatur,
+            sit nisi fugit nam sint incidunt maxime. Sunt tempore reiciendis,
+            architecto quos explicabo sit debitis sint enim doloribus ex
+            possimus asperiores eum dolorem harum aut!
+          </div>
+        </container>
+      </div>
+
+      <div class="bottom">
+        <img src="Pic/n.png" alt="Gladtidingsdata" />
+        <p class="para">
+          We offer instant recharge of Airtime, Data Bundle, Cable Tv( DSTV,
+          GOTV &amp; startimes) and so much more.
+        </p>
+        <div class="butm_1">
+          <p>product</p>
+          <ul class="bottom_ul">
+            <li class="para">Buy Data</li>
+            <li class="para">Airtime Topup</li>
+            <li class="para">Cable Subscription</li>
+            <li class="para">Utility Payment</li>
+          </ul>
+          <p>Useful link</p>
+          <ul class="bottom_ul">
+            <li class="para"><a href="#features">Our Features</a></li>
+            <li class="para"><a href="#service">Our Services</a></li>
+            <li class="para"><a href="">Login</a></li>
+            <li class="para"><a href="">Register</a></li>
+          </ul>
+          <p>contact Information</p>
+          <ul class="bottom_ul">
+            <li class="para">Buy Data</li>
+            <li class="para">Airtime Topup</li>
+            <li class="para">Cable Subscription</li>
+            <li class="para">Utility Payment</li>
+          </ul>
+        </div>
+      </div>
+      <hr />
+    </main>
+    <footer class="footer">
+      <p class="para">&copy;2023 GLADTIDINGSDATA. All rights Reserved</p>
+      <p class="para">DEVELOPED BY: Empire Developers</p>
+    </footer>
   </body>
 </html>
