Added style to the feature link

--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
     </header>
 
     <main class="main">
-      <section class="main_section">
-        <div class="outer">
+      <section class="section">
+        <div class="section_outer">
           <div class="flex_items">
-            <h1 class="para section h1">WELCOME TO GLADTIDINGSDATA</h1>
-            <p class="subhead section p1">Gladtidingsdata for</p>
-            <span class="subhead section p1">everyone</span>
-            <p class="para section p1">
+            <h1 class="para h1">WELCOME TO GLADTIDINGSDATA</h1>
+            <p class="subhead">
+              Gladtidingsdata for<br />
+              everyone
+            </p>
+            <p class="section_p para">
               Buy cheap and affordable plan easily with cables
             </p>
-            <span class="para section p1">
+            <span class="section_p para">
               subscriptions
               <a href="dashboard.html" class="h1">REGISTER NOW!!</a>
             </span>
@@ -69,7 +71,7 @@
           </div>
           <img
             src="Pic/praise.png"
-            class="fpic"
+            class="duoblephone"
             alt="pic"
             height="532"
             width="469"
@@ -77,12 +79,12 @@
         </div>
       </section>
 
-      <div class="dept aboutus" id="about">
+      <div class="divs aboutus" id="about">
         <div class="about_text">
-          <h2 class="aboutUs subhead">Why Choose Us</h2>
+          <h2 class="aboutUs bigtext">Why Choose Us</h2>
           <p class="aboutUs para">
-            Trusted data platform for resellers. Subscribe for cheap data plans
-            at affordable price for all networks.
+            Trusted data platform for resellers. Subscribe for cheap data <br />
+            plans at affordable price for all networks.
           </p>
         </div>
 
@@ -121,13 +123,20 @@
         </div>
       </div>
 
-      <div id="features" class="dept">
-        <div class="feat_1">
-          <div class="Awesome">
-            <img src="Pic/hero-1-img.png" alt="pic2" height="962" width="773" />
-            <p class="feature para">Our Features</p>
+      <div id="features" class="divs feature">
+        <div class="feat feat_bg">
+          <!-- <div class="feat_bg"> -->
+          <img
+            src="Pic/hero-1-img.png"
+            alt="pic2"
+            height="962"
+            width="773"
+            class="hero"
+          />
 
-            <h2 class="feature subhead">We Provide Awesome Services</h2>
+          <div class="awesome">
+            <p class="feature para">OUR FEATURES</p>
+            <h2 class="feat_h2 bigtext">We Provide Awesome Services</h2>
 
             <p class="para">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. In odit
@@ -146,12 +155,13 @@
               adipisci fuga perspiciatis iste? Possimus, exercitationem
               assumenda?
             </p>
+            <!-- </div> -->
           </div>
         </div>
-        <div class="feat_2">
+        <div class="feat sec">
           <div class="seconds">
-            <p class="feature para">Register in 30 seconds</p>
-            <h2 class="feature subhead">BecomeAn Agent</h2>
+            <p class="para">Register in 30 seconds</p>
+            <h2 class="feat_h2 bigtext">Become An Agent</h2>
 
             <p class="para">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. In odit
@@ -171,15 +181,21 @@
               adipisci fuga perspiciatis iste? Possimus, exercitationem
               assumenda?
             </p>
-            <img src="Pic/5.png" alt="pic2" height="527" width="527" />
           </div>
+          <img src="Pic/5.png" alt="pic2" height="527" width="527" />
         </div>
 
-        <div class="feat_3">
+        <div class="feat">
+          <img
+            src="Pic/carbon.png"
+            alt="pic2"
+            height="960"
+            width="1540"
+            class="carbon_code"
+          />
           <div class="integrate">
-            <img src="Pic/carbon.png" alt="pic2" height="960" width="1540" />
             <p class="feature para">Perfect Integration</p>
-            <h2 class="feature subhead">Intgrate our API</h2>
+            <h2 class="feature feat_h2 bigtext">Intgrate our API</h2>
 
             <p class="para">
               Are you a developer, adipisicing elit. In odit est quae id
@@ -191,9 +207,9 @@
           </div>
         </div>
       </div>
-      <div id="service" class="dept">
+      <div id="service" class="divs">
         <div class="serv">
-          <h2 class="subhead">Our Services</h2>
+          <h2 class="feat_h2 bigtext">Our Services</h2>
           <p class="para">
             We offer instant recharge of Airtime, Data Bundle, Cable Tv( DSTV,
             GOTV &amp; startimes) and so much more.
@@ -242,11 +258,11 @@
           </container>
         </div>
       </div>
-      <div id="faqs" class="dept">
+      <div id="faqs" class="divs">
         <div class="FAQ"></div>
         <div class="faq_1">
           <p class="para">FAQs</p>
-          <h2 class="subhead">Common Questions</h2>
+          <h2 class="bigtext">Common Questions</h2>
           <p class="para">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut
             doloremque magnam cupiditate magni ipsam, aliquid eius officiis
@@ -300,9 +316,9 @@
         <img src="" alt="" />
       </div>
 
-      <div class="review dept">
+      <div class="review divs">
         <p class="para">Review</p>
-        <h2 class="subhead">Our Happy Customers</h2>
+        <h2 class="bigtext">Our Happy Customers</h2>
         <div class="review_tags">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quisquam.
         </div>
@@ -312,7 +328,7 @@
         </div>
       </div>
 
-      <div class="plans dept">
+      <div class="plans divs">
         <p class="para">Plans And Prices</p>
         <container class="plans_block">
           <div class="plan_tag">
