completed the css

--- a/index.html
+++ b/index.html
@@ -36,48 +36,61 @@
           </li>
           <li>
             <a href="dashboard" class="anolink">
-              Dashboard <img src="Pic/person.png" alt="" class="dash" />
+              Dashboard
+              <img src="Pic/person.png" alt="" height="" class="icon" />
             </a>
           </li>
           <li>
             <a href=".html" class="anolink">
-              LogOut <img src="Pic/unlock fill.png" alt="" class="dash" />
+              LogOut <img src="Pic/unlock fill.png" alt="" class="icon" />
             </a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <main class="main">
-      <section class="section">
-        <div class="section_outer">
-          <div class="flex_items">
-            <h1 class="para h1">WELCOME TO GLADTIDINGSDATA</h1>
-            <p class="subhead">
-              Gladtidingsdata for<br />
-              everyone
-            </p>
-            <p class="section_p para">
-              Buy cheap and affordable plan easily with cables
-            </p>
-            <span class="section_p para">
-              subscriptions
-              <a href="dashboard.html" class="h1">REGISTER NOW!!</a>
-            </span>
+    <!-- ........ LANDING PAGE......... -->
+
+    <section class="section">
+      <div class="section_outer">
+        <div class="flex_items">
+          <h1 class="para h1">WELCOME TO GLADTIDINGSDATA</h1>
+          <p class="subhead">
+            Gladtidingsdata for<br />
+            everyone
+          </p>
+          <p class="section_p para">
+            Buy cheap and affordable plan easily with cables
+          </p>
+          <span class="section_p para">
+            subscriptions
+            <a href="dashboard.html" class="h1">REGISTER NOW!!</a>
+          </span>
+          <div class="button">
             <img src="Pic/" alt="" />
             <a href="dashboard" class="anolink">
               Dashboard <img src="Pic/person.png" alt="" class="dash" />
             </a>
+            <a href="https://play.google.com/store/games?hl=en&gl=US"
+              ><img
+                src="Pic/googleplay.png"
+                alt="googleplay"
+                class="googleplay"
+            /></a>
           </div>
-          <img
-            src="Pic/praise.png"
-            class="duoblephone"
-            alt="pic"
-            height="532"
-            width="469"
-          />
         </div>
-      </section>
+        <img
+          src="Pic/praise.png"
+          class="duoblephone"
+          alt="pic"
+          height="532"
+          width="469"
+        />
+      </div>
+    </section>
+
+    <main class="main">
+      <!-- ........ ABOUT US......... -->
 
       <div class="divs aboutus" id="about">
         <div class="about_text">
@@ -122,6 +135,8 @@
           </div>
         </div>
       </div>
+
+      <!-- ........FEATURES......... -->
 
       <div id="features" class="divs feature">
         <div class="feat feat_bg">
@@ -182,7 +197,13 @@
               assumenda?
             </p>
           </div>
-          <img src="Pic/5.png" alt="pic2" height="527" width="527" />
+          <img
+            src="Pic/5.png"
+            alt="pic2"
+            height="527"
+            width="527"
+            class="hero"
+          />
         </div>
 
         <div class="feat">
@@ -195,7 +216,7 @@
           />
           <div class="integrate">
             <p class="feature para">Perfect Integration</p>
-            <h2 class="feature feat_h2 bigtext">Intgrate our API</h2>
+            <h2 class="feature feat_h2 bigtext">Integrate our API</h2>
 
             <p class="para">
               Are you a developer, adipisicing elit. In odit est quae id
@@ -207,59 +228,83 @@
           </div>
         </div>
       </div>
-      <div id="service" class="divs">
+
+      <!-- ........ OUR SERVICE......... -->
+
+      <div id="service" class="divs service">
         <div class="serv">
           <h2 class="feat_h2 bigtext">Our Services</h2>
           <p class="para">
             We offer instant recharge of Airtime, Data Bundle, Cable Tv( DSTV,
             GOTV &amp; startimes) and so much more.
           </p>
-          <container class="serv_grid_items">
+        </div>
+
+        <container class="serv_grid_items">
+          <div>
             <div class="block">
-              <img src="Pic/wifi.png" alt="wifi" height="128" width="128" />
-              <h3 class="serv_h3">BULK SMS</h3>
-              <p class="para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-                voluptates!
-              </p>
+              <img src="Pic/wifi.png" alt="tv" height="128" width="128" />
+              <div>
+                <h3 class="serv_h3">BUY DATA</h3>
+                <p class="para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                  voluptates!
+                </p>
+              </div>
             </div>
+
+            <div class="block">
+              <img src="Pic/phone.png" alt="bulb" height="128" width="128" />
+              <div>
+                <h3 class="serv_h3">AIRTIME RECHARGE</h3>
+                <p class="para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                  voluptates!
+                </p>
+              </div>
+            </div>
+
             <div class="block">
               <img src="Pic/sms.png" alt="sms" height="128" width="128" />
-              <h3 class="serv_h3">UTILITY BILLS</h3>
-              <p class="para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-                voluptates!
-              </p>
+              <div>
+                <h3 class="serv_h3">BULK SMS</h3>
+                <p class="para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                  voluptates!
+                </p>
+              </div>
             </div>
+          </div>
+
+          <div>
             <div class="block">
-              <img src="Pic/light.png" alt="bulb" height="128" width="128" />
-              <h3 class="serv_h3">AIRTIME RECHARGE</h3>
-              <p class="para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-                voluptates!
-              </p>
+              <img src="Pic/tv.png" alt="phone" height="128" width="128" />
+              <div>
+                <h3 class="serv_h3">CABLE SUBSCRIPTION</h3>
+                <p class="para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                  voluptates!
+                </p>
+              </div>
             </div>
+
             <div class="block">
-              <img src="Pic/phone.png" alt="phone" height="128" width="128" />
-              <h3 class="serv_h3">CABLE SUBSCRIPTION</h3>
-              <p class="para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-                voluptates!
-              </p>
+              <img src="Pic/light.png" alt="wifi" height="128" width="128" />
+              <div>
+                <h3 class="serv_h3">UTILITY BILLS</h3>
+                <p class="para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                  voluptates!
+                </p>
+              </div>
             </div>
-            <div class="block">
-              <img src="Pic/tv.png" alt="tv" height="128" width="128" />
-              <h3 class="serv_h3">Buy Data</h3>
-              <p class="para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-                voluptates!
-              </p>
-            </div>
-          </container>
-        </div>
+          </div>
+        </container>
       </div>
-      <div id="faqs" class="divs">
-        <div class="FAQ"></div>
+
+      <!-- ........ FAQS......... -->
+
+      <div id="faqs" class="divs faqs">
         <div class="faq_1">
           <p class="para">FAQs</p>
           <h2 class="bigtext">Common Questions</h2>
@@ -270,6 +315,7 @@
             eligendi eos culpa adipisci!
           </p>
         </div>
+
         <div class="faq_2">
           <p>How to buy data</p>
           <ol>
@@ -280,6 +326,7 @@
             <p>NB: You can buy coupon from our agents</p>
           </ol>
         </div>
+
         <hr />
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
@@ -292,6 +339,7 @@
           temporibus.
         </p>
         <img src="" alt="" />
+
         <hr />
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
@@ -299,39 +347,74 @@
         </p>
         <img src="" alt="" />
         <hr />
+
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis,
           temporibus.
         </p>
         <img src="" alt="" />
         <hr />
+
         <input type="checkbox" name="" id="" />
         Have more questions? <a href="">Ask your Questions here.</a>
       </div>
 
-      <div class="download">
-        <h1>Welcome to Gladtidingsdata</h1>
-        <p>Download The GLADTIDINGSDATA App</p>
-        <p>The Gladtidingsdata App is now available on Google PlayStore.</p>
-        <img src="" alt="" />
+      <!-- ........DOWNLOAD......... -->
+
+      <div class="download divs">
+        <h1 class="download_text para">Welcome to Gladtidingsdata</h1>
+        <p class="download_p bigtext">Download The GLADTIDINGSDATA App</p>
+        <p class="download_text para">
+          The Gladtidingsdata App is now available on Google PlayStore.
+        </p>
+        <img src="Pic/googleplay.png" alt="googleplay" class="googleplay" />
       </div>
 
-      <div class="review divs">
-        <p class="para">Review</p>
-        <h2 class="bigtext">Our Happy Customers</h2>
-        <div class="review_tags">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quisquam.
-        </div>
-        <div class="review_tags">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id,
-          mollitia!
+      <!-- ........ REVIEW......... -->
+
+      <!-- <div class="review divs"> -->
+      <!-- 
+          TODO: max-wi
+           -->
+      <div class="review-section">
+        <div class="container review">
+          <div class="review_text_div">
+            <p class="para">Review</p>
+            <h2 class="bigtext">Our Happy Customers</h2>
+          </div>
+          <div class="review_wrapper">
+            <div class="review_tags_div">
+              <div class="review_tags">
+                <p class="review_p para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                  ipsa dignissimos, earum esse explicabo dicta pariatur odit
+                  impedit suscipit assumenda sint eius culpa. Odit laudantium
+                  iusto possimus non nemo eligendi neque, quos qui excepturi,
+                  soluta omnis animi doloribus, voluptas sint dolores eaque
+                  ipsum temporibus placeat veritatis et dolorem numquam. Cum!
+                </p>
+              </div>
+              <div class="review_tags">
+                <p class="review_p para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+                  ipsa dignissimos, earum esse explicabo dicta pariatur odit
+                  impedit suscipit assumenda sint eius culpa. Odit laudantium
+                  iusto possimus non nemo eligendi neque, quos qui excepturi,
+                  soluta omnis animi doloribus, voluptas sint dolores eaque
+                  ipsum temporibus placeat veritatis et dolorem numquam. Cum!
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
+      <!-- ..............PLANS AND PRICES.............. -->
       <div class="plans divs">
         <p class="para">Plans And Prices</p>
+        <h2 class="bigtext">AFFORDABLE DATA PLANS</h2>
         <container class="plans_block">
           <div class="plan_tag">
+            <p class="para">GLO Plans</p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsa
             dignissimos, earum esse explicabo dicta pariatur odit impedit
             suscipit assumenda sint eius culpa. Odit laudantium iusto possimus
@@ -340,6 +423,7 @@
             veritatis et dolorem numquam. Cum!
           </div>
           <div class="plan_tag">
+            <p class="para">MTN Plans</p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo
             accusamus, commodi incidunt id laboriosam labore impedit et
             delectus, sed consequuntur dolores mollitia ab. Incidunt reiciendis
@@ -348,6 +432,7 @@
             reiciendis quasi. A corporis voluptatem quis id.
           </div>
           <div class="plan_tag">
+            <p class="para">Airtel Plans</p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
             Perferendis dolore, sed repellendus atque quibusdam magnam quo est,
             velit blanditiis sequi facere itaque officiis similique pariatur,
@@ -358,28 +443,19 @@
         </container>
       </div>
 
-      <div class="bottom">
-        <img src="Pic/n.png" alt="Gladtidingsdata" />
-        <p class="para">
-          We offer instant recharge of Airtime, Data Bundle, Cable Tv( DSTV,
-          GOTV &amp; startimes) and so much more.
-        </p>
-        <div class="butm_1">
-          <p>product</p>
-          <ul class="bottom_ul">
-            <li class="para">Buy Data</li>
-            <li class="para">Airtime Topup</li>
-            <li class="para">Cable Subscription</li>
-            <li class="para">Utility Payment</li>
-          </ul>
-          <p>Useful link</p>
-          <ul class="bottom_ul">
-            <li class="para"><a href="#features">Our Features</a></li>
-            <li class="para"><a href="#service">Our Services</a></li>
-            <li class="para"><a href="">Login</a></li>
-            <li class="para"><a href="">Register</a></li>
-          </ul>
-          <p>contact Information</p>
+      <div class="last_wrapper divs">
+        <div class="bottom_wrapper">
+          <h1 class="header_logo">
+            <img src="Pic/n.png" alt="Gladtidingsdata" />
+          </h1>
+          <p class="bottom_p para">
+            We offer instant recharge of Airtime, Data Bundle, Cable Tv( DSTV,
+            GOTV &amp; startimes) and so much more.
+          </p>
+        </div>
+        <!--  <div class="butm_1"> -->
+        <div>
+          <p class="plan_tag">Product</p>
           <ul class="bottom_ul">
             <li class="para">Buy Data</li>
             <li class="para">Airtime Topup</li>
@@ -387,6 +463,25 @@
             <li class="para">Utility Payment</li>
           </ul>
         </div>
+        <div>
+          <p class="plan_tag">Useful Link</p>
+          <ul class="bottom_ul">
+            <li><a href="#features" class="para">Our Features</a></li>
+            <li><a href="#service" class="para">Our Services</a></li>
+            <li><a href="" class="para">Login</a></li>
+            <li><a href="" class="para">Register</a></li>
+          </ul>
+        </div>
+        <div>
+          <p class="plan_tag">Contact Information</p>
+          <ul class="bottom_ul">
+            <li class="para">Buy Data</li>
+            <li class="para">Airtime Topup</li>
+            <li class="para">Cable Subscription</li>
+            <li class="para">Utility Payment</li>
+          </ul>
+        </div>
+        <!-- </div> -->
       </div>
       <hr />
     </main>
