--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="button">
             <img src="Pic/" alt="" />
             <a href="dashboard" class="anolink">
-              Dashboard <img src="Pic/person.png" alt="" class="dash" />
+              Dashboard <img src="Pic/person.png" alt="" class="icon" />
             </a>
             <a href="https://play.google.com/store/games?hl=en&gl=US"
               ><img
